2010-12-09  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/SyntaxChecker.h (new addition): syntax checking mechanism for mlp 
	* src/dlvhex/SyntaxChecker.cpp (new addition): syntax checking mechanism for mlp
	* include/dlvhex/ModuleAtomTable.h: adding getSize() and getAllByAddress()
	* src/dlvhex/ModuleAtomTable.cpp: adding getSize() and getAllByAddress()
	* include/dlvhex/ProgramCtx.h: adding ModuleHeaderTable mHT in registry
	* src/dlvhex/ProgramCtx.cpp: adding ModuleHeaderTable mHT in registry
	* include/dlvhex/ModuleHeaderTable.h: adding typedef, adding method getPredInputs and getModuleSet
	* src/dlvhex/ModuleHeaderTable.cpp: adding method getPredInputs and getModuleSet
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: adding namespacing in createTerm_Helper
	* src/dlvhex/TestHexParserModule.cpp: adding SyntaxChecker

2010-12-08  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* src/dlvhex/ModuleHeaderTable.cpp: implementing data structures for module
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: storing module header, edb, and idb for each module
	* include/dlvhex/ModuleHeaderTable.h: implementing data structures for module
	* include/dlvhex/HexGrammarPTToASTConverter.h: storing module header, edb, and idb for each module
	* testsuite/Makefile.am: adapting TestHexParserModule to ModuleHeaderTable
	* Committed revision 2517.

2010-12-03  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleSyntaxChecker.h: add some syntax checking rule for duplicating predicate input
	* src/dlvhex/ModuleSyntaxChecker.cpp: add some syntax checking rule for duplicating predicate input
	* testsuite/TestModuleSyntaxChecker.cpp: new file, test case exclusively for the ModuleSyntaxChecker.cpp
	* testsuite/Makefile.am: adding TestModuleSyntaxChecker.cpp
	* Committed revision 2514.

2010-11-30  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
